# pega-caminho

./: .gitignore  Pega Caminho v0.1.0.spec  Pega Caminho v0.2.0.spec  Pega Caminho v0.2.1.spec  pega-caminho.py  pyproject.toml  ui_janela.py  ui_janela.ui
gui/: droparea.py
