[tool.poetry]
name = "pega-caminho"
version = "0.2.1"
description = ""
authors = ["Everton de Souza"]
readme = "README.md"
packages = [{include = "pega_caminho"}]

[tool.poetry.dependencies]
python = "^3.11"
PySide6 = "^6.5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
