[tool.poetry]
name = "pega-caminho"
version = "0.2.1"
description = ""
authors = ["Everton de Souza"]
readme = "README.md"
packages = [{include = "pega_caminho"}]

[tool.poetry.dependencies]
python = "3.10.11"
pyside2 = "^5.15.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
